Performance improvements in EventLists related support classes and DirtyTrackingDCBCVM. Added "common" folder for shared application context files. More improvements including Sonar fixes